--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="40dp">
+    android:padding="@dimen/normal_margin">
 
     <EditText
         android:id="@+id/etMail_feedback_message"
@@ -15,39 +14,37 @@
         android:inputType="textMultiLine"
         android:textColor="#000000"
         android:background="@drawable/shape"
-        android:layout_margin="5dp">
+        android:layout_marginTop="@dimen/normal_margin">
     </EditText>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
     <Button
         android:id="@+id/btn_feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send Feedback Via Gmail"
         android:background="@drawable/pink_button_on_select"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_below="@+id/etMail_feedback_message"
+        android:layout_marginTop="@dimen/medium_margin"/>
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/tvVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/adView"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/large_text"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/medium_margin"/>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
+        ads:adUnitId="@string/banner_ad_unit_id"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true">
     </com.google.android.gms.ads.AdView>
 
-</LinearLayout>
+</RelativeLayout>
