--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,23 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="design_navigation_icon_size" tools:override="true">40dp</dimen>
+
+
+    // margins and paddings
+    <dimen name="very_small_margin">2dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+    <dimen name="normal_margin">8dp</dimen>
+    <dimen name="medium_margin">12dp</dimen>
+    <dimen name="large_margin">16dp</dimen>
+    <dimen name="x_large_margin">20dp</dimen>
+
+    // text sizes
+    <dimen name="very_small_text">10sp</dimen>
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="normal_text">14sp</dimen>
+    <dimen name="medium_text">16sp</dimen>
+    <dimen name="large_text">18sp</dimen>
+    <dimen name="x_large_text">20sp</dimen>
+    <dimen name="very_large_text">24sp</dimen>
+    <dimen name="too_large_text">30sp</dimen>
 </resources>
