HomeActivity.java: Solve bug(App was crashed when click on exit app if song is playing)                    Added adView on home page                    Added app exit option MusicPlayerActivity.java: Solve minor bugs and added adView. Written_Aarti.java: Added adView Written_Aarti_Text.java: Added adView MyFirebaseMsgService.java: changed condition and show title and text in notification NotificationHelper.java: Added large icon                          Show text and title in notification SplashScreenActivity.java: Added request permission for location access

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,14 +17,6 @@
 
             android:title="आरती"
             />
-        <!--<item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />-->
     </group>
 
     <item android:title="संवाद">
@@ -35,7 +27,7 @@
                 android:icon="@drawable/icon3"
 
                 android:title="एप्लिकेशन शेयर"
-                android:actionProviderClass="android.widget.ShareActionProvider"/>
+                app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
             <item
                 android:id="@+id/feedbackDrawer"
                 app:itemTextAppearance="?android:attr/textAppearanceMedium"
@@ -47,6 +39,11 @@
                 app:itemTextAppearance="?android:attr/textAppearanceMedium"
                 android:icon="@drawable/icon5"
                 android:title="अपडेट एप" />
+            <item
+                android:id="@+id/exitDrawer"
+                app:itemTextAppearance="?android:attr/textAppearanceMedium"
+                android:icon="@drawable/exit"
+                android:title="बाहर जाएं" />
         </menu>
     </item>
 </menu>
