--- a/app/src/main/res/layout/activity_written__aarti__text.xml
+++ b/app/src/main/res/layout/activity_written__aarti__text.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="true"
-    android:scrollbars="vertical"
-    android:scrollbarStyle="insideInset">
-
-<TextView
-    android:id="@+id/label"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dip"
-    android:textSize="22dip"
-    android:textStyle="bold"
-    android:textAlignment="center">
-</TextView>
-
-</ScrollView>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="insideInset"
+        android:layout_above="@id/adView">
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dip"
+            android:textSize="@dimen/x_large_text"
+            android:textStyle="bold"
+            android:textAlignment="center"/>
+    </ScrollView>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
+</RelativeLayout>
