1. HomeActivity.java: Added now playing area at the bottom of activity 2. MusicPlayerActivity.java:    i.Song will play if go back    ii. Song will stop while incoming calls    iii. code refactoring 3. SplashScreen.java: Added Read Phone state permission to check incoming calls

--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -115,7 +115,7 @@
     <!-- Progress Bar/Seek bar -->
     <SeekBar
         android:id="@+id/songProgressBar"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
