--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -11,26 +11,67 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_home">
 
-    <ListView
-        android:id="@+id/listSongs"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:divider="#b5b5b5"
-        android:dividerHeight="1dp"
-        android:background="@drawable/list_selector"
-        android:layout_alignParentTop="true"
-        android:layout_above="@id/adView"
-        android:layout_marginBottom="@dimen/very_small_margin">
-    </ListView>
-
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
     </com.google.android.gms.ads.AdView>
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/listSongs"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:divider="#b5b5b5"
+        android:dividerHeight="1dp"
+        android:background="@drawable/list_selector"
+        app:layout_constraintTop_toBottomOf="@id/adView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/playingLayout">
+    </ListView>
+
+    <RelativeLayout
+        android:id="@+id/playingLayout"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/black">
+        <TextView
+            android:id="@+id/playingSongName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/large_text"
+            android:textColor="@android:color/holo_green_dark"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/playingImg"
+            android:ellipsize="marquee"
+            android:layoutDirection="ltr"
+            android:textDirection="ltr"
+            android:fadingEdge="horizontal"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="@dimen/medium_margin"/>
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/playingImg"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="@dimen/medium_margin"
+            android:src="@drawable/tenor"/>
+    </RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
