1. Added fragments in navigation drawer 2. Added Hindi aarti section with recycler view and card view. 3. UserInterfaceUtils.java: Added method to load the banner ads. 4.Code refactor

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">	#FF0000</color>
-    <color name="colorPrimaryDark">#333</color>
+    <color name="colorPrimary">#FF0000</color>
+    <color name="colorPrimaryDark">#FF6666</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="light_pink">#F25E63</color>
     <color name="dark_pink">#e12a20</color>
     <color name="orange">#FFA07A</color>
+    <color name="album_title">#4c4c4c</color>
 </resources>
