--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,6 @@
     <dimen name="x_large_text">20sp</dimen>
     <dimen name="very_large_text">24sp</dimen>
     <dimen name="too_large_text">30sp</dimen>
+
+    <dimen name="card_album_radius">0dp</dimen>
 </resources>
