1. Added English written aarti 2. Added disclaimer statement 3. change color of tool bar to green 4. change navigation drawer icons(vector assets) 5. HomeFragment: replace list view to recycler view

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,7 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        app:itemTextColor="#FF0000"
+        app:itemTextColor="#000000"
         app:itemTextAppearance="@style/NavDrawerTextStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
