--- a/app/src/main/res/layout/activity_show_aarti.xml
+++ b/app/src/main/res/layout/activity_show_aarti.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="\ue900"
-        android:textSize="@dimen/too_large_text"
+        android:textSize="@dimen/arrow_text"
+        android:paddingTop="@dimen/medium_margin"
+        android:paddingBottom="@dimen/medium_margin"
         android:textColor="@android:color/holo_green_dark"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintTop_toTopOf="parent"
@@ -23,7 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="\ue901"
-        android:textSize="@dimen/too_large_text"
+        android:textSize="@dimen/arrow_text"
+        android:paddingTop="@dimen/medium_margin"
+        android:paddingBottom="@dimen/medium_margin"
         android:textColor="@android:color/holo_green_dark"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintTop_toTopOf="parent"
