--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,18 +15,17 @@
         app:layout_constraintEnd_toEndOf="parent">
     </com.google.android.gms.ads.AdView>
 
-    <ListView
-        android:id="@+id/listSongs"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvListBhajan"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:divider="#b5b5b5"
-        android:dividerHeight="1dp"
-        android:background="@drawable/list_selector"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/adView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/playingLayout">
-    </ListView>
+        app:layout_constraintBottom_toTopOf="@id/playingLayout"/>
 
     <RelativeLayout
         android:id="@+id/playingLayout"
