--- a/app/src/main/res/layout/home_list_view.xml
+++ b/app/src/main/res/layout/home_list_view.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/laySongView"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="horizontal">
-
-<ImageView
-    android:id="@+id/ivDeviFace"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
-    android:background="@drawable/image_bg"/>
-
-<TextView
-    android:id="@+id/tvSongName"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:textColor="@color/colorAccent"
-    android:layout_margin="10dp"
-    android:textSize="17dp" />
+    android:layout_height="@dimen/thumbnail_height"
+    android:layout_margin="@dimen/small_margin"
+    android:elevation="@dimen/very_small_margin">
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/ivDeviFace"
+            android:layout_width="@dimen/thumbnail_width"
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
+            android:scaleType="fitXY"/>
+        <TextView
+            android:id="@+id/tvSongName"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@id/ivDeviFace"
+            android:layout_alignParentEnd="true"
+            android:textStyle="bold"
+            android:textColor="@color/album_title"
+            android:textSize="@dimen/large_text"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/normal_margin"
+            android:paddingEnd="@dimen/normal_margin"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:background="?android:attr/selectableItemBackground"/>
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
