--- a/app/src/main/res/layout/list_view_aarti.xml
+++ b/app/src/main/res/layout/list_view_aarti.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="@dimen/thumbnail_height"
     android:layout_margin="@dimen/small_margin"
     android:elevation="@dimen/very_small_margin">
 
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="70dp"
+            android:layout_width="@dimen/thumbnail_width"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="fitXY"/>
