--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF0000</color>
-    <color name="colorPrimaryDark">#FF6666</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff669900</color>
+    <color name="colorPrimaryDark">#008000</color>
+    <color name="colorAccent">#32CD32</color>
 
-    <color name="light_pink">#F25E63</color>
-    <color name="dark_pink">#e12a20</color>
+    <color name="light_pink">#ff669900</color>
+    <color name="dark_pink">#ff669900</color>
     <color name="orange">#FFA07A</color>
     <color name="album_title">#4c4c4c</color>
 </resources>
