--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,9 @@
     <dimen name="x_large_text">20sp</dimen>
     <dimen name="very_large_text">24sp</dimen>
     <dimen name="too_large_text">30sp</dimen>
+    <dimen name="arrow_text">34sp</dimen>
 
     <dimen name="card_album_radius">0dp</dimen>
+    <dimen name="thumbnail_width">60dp</dimen>
+    <dimen name="thumbnail_height">60dp</dimen>
 </resources>
