1. Added ad section while swipe aarti section and onResume activity or fragment 2. Added Rate us option in navigation view.

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -32,6 +32,10 @@
             android:icon="@drawable/ic_exit_24px"
             android:title="@string/exit"/>
         <item
+            android:id="@+id/navRateUs"
+            android:icon="@drawable/ic_rate_us_24px"
+            android:title="@string/rate_us"/>
+        <item
             android:id="@+id/navDisclaimer"
             android:icon="@drawable/ic_disclaimer_24px"
             android:title="@string/disclaimer"/>
