1. HomeActivity: added title to support action bar

--- a/app/src/main/res/drawable/btn_pause.xml
+++ b/app/src/main/res/drawable/btn_pause.xml
@@ -5,7 +5,8 @@
     <item android:drawable="@drawable/img_btn_pause_pressed"
         android:state_focused="false"
         android:state_pressed="true" />
-    <item android:drawable="@drawable/img_btn_pause_pressed" android:state_focused="true" />
+    <item android:drawable="@drawable/img_btn_pause_pressed"
+        android:state_focused="true" />
     <item android:drawable="@drawable/img_btn_pause"
         android:state_focused="false"
         android:state_pressed="false" />
