--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffff" />
-    <stroke android:width="1dip" android:color="#00FF00" />
+    <solid android:color="#ffffff"/>
+    <stroke android:width="2dp" android:color="@color/colorPrimary" />
 </shape>
