--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4a4a4a">
 
-
-    <!-- Player Header -->
-    <RelativeLayout
-        android:id="@+id/player_header_bg"
+    <ImageView
+        android:id="@+id/ivDeviFace"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@layout/bg_player_header"
-        android:layout_alignParentTop="true">
-        <TextView
-            android:id="@+id/tvSongTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_marginEnd="@dimen/normal_margin"
-            android:layout_marginStart="@dimen/normal_margin"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/x_large_text"
-            android:layout_centerInParent="true"
-            android:maxLines="1"
-            android:ellipsize="end"/>
+        android:layout_height="220dp"
+        android:src="@drawable/devi_wallpaper"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitXY"/>
 
-    </RelativeLayout>
-
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/ivDeviFace">
+    </com.google.android.gms.ads.AdView>
 
     <LinearLayout
         android:id="@+id/player_footer_bg"
@@ -108,7 +102,6 @@
                     android:layout_height="wrap_content"
                     android:background="@null"/>
             </RelativeLayout>
-
         </LinearLayout>
     </LinearLayout>
 
@@ -161,55 +154,6 @@
 
     </LinearLayout>
 
-    <!-- Repeat / Shuffle buttons -->
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/timerDisplay"
-        android:gravity="center">
 
-        <!-- Repeat Button -->
-        <ImageButton
-            android:id="@+id/btnRepeat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_repeat"
-            android:layout_marginRight="5dp"
-            android:background="@null"/>
-
-        <!-- Shuffle Button -->
-        <!--<ImageButton
-            android:id="@+id/btnShuffle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_shuffle"
-            android:layout_marginLeft="5dp"
-            android:background="@null"/>-->
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/songThumbnail"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:gravity="center"
-        android:layout_below="@+id/player_header_bg"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-        <ImageView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/deviface_oldpic"/>
-    </LinearLayout>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/songThumbnail">
-    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
