--- a/app/src/main/res/layout/home_list_view.xml
+++ b/app/src/main/res/layout/home_list_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/thumbnail_height"
-    android:layout_margin="@dimen/small_margin"
+    android:layout_height="@dimen/bhajan_thumbnail_width"
+    android:layout_margin="@dimen/very_small_margin"
     android:elevation="@dimen/very_small_margin">
 
     <RelativeLayout
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/ivDeviFace"
-            android:layout_width="@dimen/thumbnail_width"
+            android:layout_width="@dimen/bhajan_thumbnail_width"
             android:layout_height="match_parent"
             android:background="?android:attr/selectableItemBackground"
             android:scaleType="fitXY"/>
@@ -19,9 +19,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_toEndOf="@id/ivDeviFace"
-            android:layout_alignParentEnd="true"
+            android:layout_toStartOf="@id/tvHeadphone"
             android:textStyle="bold"
-            android:textColor="@color/album_title"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/large_text"
             android:gravity="center_vertical"
             android:paddingStart="@dimen/normal_margin"
@@ -29,6 +29,17 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:background="?android:attr/selectableItemBackground"/>
+        <TextView
+            android:id="@+id/tvHeadphone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="\ue901"
+            android:textSize="@dimen/arrow_text"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:paddingEnd="@dimen/normal_margin"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
