--- a/app/src/main/res/layout/list_view_aarti.xml
+++ b/app/src/main/res/layout/list_view_aarti.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/thumbnail_height"
-    android:layout_margin="@dimen/small_margin"
+    android:layout_height="@dimen/thumbnail_width"
+    android:layout_margin="@dimen/very_small_margin"
     android:elevation="@dimen/very_small_margin">
 
     <RelativeLayout
@@ -21,7 +21,7 @@
             android:layout_toEndOf="@id/thumbnail"
             android:layout_alignParentEnd="true"
             android:textStyle="bold"
-            android:textColor="@color/album_title"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/large_text"
             android:gravity="center_vertical"
             android:paddingStart="@dimen/normal_margin"
