--- a/app/src/main/res/layout/home_list_view.xml
+++ b/app/src/main/res/layout/home_list_view.xml
@@ -33,8 +33,8 @@
             android:id="@+id/tvHeadphone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="\ue901"
-            android:textSize="@dimen/arrow_text"
+            android:text="\ue910"
+            android:textSize="@dimen/x_large_text"
             android:textColor="@android:color/holo_green_dark"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
