1. HomeActivity: Added decoration lines between navigation items 2. FeedbackFragment: Hide soft keyboard (onPause, onDestroy) 3. Reduce the navigation drawer height, text size, icon size

--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -8,10 +8,9 @@
     <ImageView
         android:id="@+id/ivDeviFace"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:src="@drawable/devi_wallpaper"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitXY"/>
+        android:layout_height="200dp"
+        android:src="@drawable/deviface_oldpic"
+        android:layout_centerHorizontal="true"/>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
