--- a/app/src/main/res/layout/fragment_disclaimer.xml
+++ b/app/src/main/res/layout/fragment_disclaimer.xml
@@ -10,6 +10,5 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="@dimen/large_text"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"/>
+        android:textColor="@android:color/black"/>
 </FrameLayout>
