--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -2,10 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/bhajan"
-    android:gravity="bottom"
+    android:background="@drawable/devi_wallpaper"
     android:orientation="vertical"
-    android:padding="5dp"
-    android:layout_margin="2dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 </LinearLayout>
