--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="listPreferredItemHeightSmall">38dp</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -18,8 +19,9 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/medium_text</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:color">@android:color/black</item>
     </style>
 
 </resources>
