1. Added new devi bhajans total 20 songs

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
-        <item name="android:textSize">@dimen/medium_text</item>
+        <item name="android:textSize">@dimen/large_text</item>
         <item name="android:textStyle">bold</item>
         <item name="android:color">@android:color/black</item>
     </style>
