1. HomeActivity.kt: revert code of firebase anaytics and google analytics    Added options menu for multiple language support 2. MyApplication: Multidex install 3. ShowAartiActiviy.java: added try catch on swipe 4. Added BaseActivity.kt and BaseContextWrapper.kt 5. PhoneCallStateReceiver.kt: Bug fixed - null pointer exception in onReceive method in some devices 6. MyFirebaseMsgService.kt: Bug fixed - app was crashing onNewToken received in 4.2 version 7. Added DeviceDetails.kt 8. OnSwipeTouchListener.kt: remove onSingleTapConfirmed method because app was crashing in some devices 9. Added SharedPreferencesHelper.kt 10. activity_home_drawer.xml: added single option for hindi and marathi aarti 11. home.xml: added hindi, english and marathi language options 12. strings.xml: aaded 3 strings.xml 1)Hindi 2)English 3) Marathi 13. update build.gradle

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/navDeviBhajan"
+            android:id="@+id/navMusic"
             android:icon="@drawable/ic_music_24px"
             android:title="@string/devi_bhajan"/>
-        <item
-            android:id="@+id/navHindiAarti"
-            android:icon="@drawable/ic_text_24px"
-            android:title="हिंदी आरती"/>
-        <item
-            android:id="@+id/navMarathiAarti"
-            android:icon="@drawable/ic_text_24px"
-            android:title="मराठी आरती"/>
         <item
             android:id="@+id/navHinAartiEng"
             android:icon="@drawable/ic_text_24px"
