--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <dimen name="activity_horizontal_margin">64dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="design_navigation_icon_size" tools:override="true">28dp</dimen>
 
