1. MusicPlayerActivity.kt: reduce update progress when click on progress from 1000 ms to 0 ms 2. Change color accent code so that music progress color should be like color accent

--- a/app/src/main/res/layout/new_activity_music_player.xml
+++ b/app/src/main/res/layout/new_activity_music_player.xml
@@ -30,7 +30,7 @@
         android:id="@+id/songCurrentDurationLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorAccent"
         android:textStyle="bold"
         android:textSize="@dimen/normal_text"
         android:layout_marginStart="@dimen/normal_margin"
@@ -42,7 +42,7 @@
         android:id="@+id/songTotalDurationLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:textSize="@dimen/normal_text"
         android:layout_marginEnd="@dimen/normal_margin"
