--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#ff669900</color>
     <color name="colorPrimaryDark">#008000</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorAccent">#D81B60</color>
 
     <color name="start_color">#669900</color>
     <color name="center_color">#d3d3d3</color>
