--- a/app/src/main/res/drawable/green_button_dark.xml
+++ b/app/src/main/res/drawable/green_button_dark.xml
@@ -6,9 +6,5 @@
         android:endColor="@color/colorPrimaryDark"
         android:startColor="@color/colorPrimaryDark"/>
       <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
-
+          android:radius="@dimen/medium_margin"/>
 </shape>
