--- a/app/src/main/res/drawable/green_button_light.xml
+++ b/app/src/main/res/drawable/green_button_light.xml
@@ -5,11 +5,6 @@
         android:centerColor="@color/colorPrimary"
         android:endColor="@color/colorPrimary"
         android:startColor="@color/colorPrimary"/>
-
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
-
+        android:radius="@dimen/medium_margin"/>
 </shape>
