removed marathi language support(string.xml_mar), marathi aartis and unwanted icons of god

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,11 +9,7 @@
         <item
             android:id="@+id/navHinAartiEng"
             android:icon="@drawable/ic_text_24px"
-            android:title="@string/hindi_aarti"/>
-        <item
-            android:id="@+id/navMarAartiEng"
-            android:icon="@drawable/ic_text_24px"
-            android:title="@string/marathi_aarti"/>
+            android:title="@string/devi_aarti"/>
         <item
             android:id="@+id/navOurApps"
             android:icon="@drawable/ic_more_apps_24px"
