--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -17,6 +17,17 @@
         android:background="@drawable/welcome1"
         android:layout_marginBottom="@dimen/large_margin"/>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </com.google.android.gms.ads.AdView>
+
     <androidx.appcompat.widget.AppCompatSeekBar
         android:id="@+id/songProgressBar"
         android:layout_width="0dp"
@@ -58,7 +69,7 @@
         android:weightSum="5"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintBottom_toTopOf="@id/adView">
+        ads:layout_constraintBottom_toBottomOf="parent">
         <ImageButton
             android:layout_weight="1"
             android:id="@+id/btnPrevious"
@@ -100,14 +111,4 @@
             style="@style/SelectableItemBackgroundBorderless"
             android:layout_gravity="center"/>
     </LinearLayout>
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </com.google.android.gms.ads.AdView>
 </androidx.constraintlayout.widget.ConstraintLayout>
